force-app/main/default/objects/Account/fields/Battle_Card_JSON__c.field-meta.xml
<CustomField>
    <fullName>Battle_Card_JSON__c</fullName>
    <label>Battle Card JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>