force-app/main/default/objects/Account/fields/GTM_Battle_Card_JSON__c.field-meta.xml
<CustomField>
    <fullName>GTM_Battle_Card_JSON__c</fullName>
    <label>GTM Battle Card JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>