force-app/main/default/objects/Account/fields/GTM_Company_Overview__c.field-meta.xml
<CustomField>
    <fullName>GTM_Company_Overview__c</fullName>
    <label>GTM Company Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>