force-app/main/default/objects/Account/fields/GTM_Competitive_Positioning__c.field-meta.xml
<CustomField>
    <fullName>GTM_Competitive_Positioning__c</fullName>
    <label>GTM Competitive Positioning</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>