force-app/main/default/objects/Account/fields/GTM_Confidence_Score__c.field-meta.xml
<CustomField>
    <fullName>GTM_Confidence_Score__c</fullName>
    <label>GTM Confidence Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>