force-app/main/default/objects/Account/fields/GTM_Contacts_JSON__c.field-meta.xml
<CustomField>
    <fullName>GTM_Contacts_JSON__c</fullName>
    <label>GTM Contacts JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>