force-app/main/default/objects/Account/fields/GTM_Last_Enriched__c.field-meta.xml
<CustomField>
    <fullName>GTM_Last_Enriched__c</fullName>
    <label>GTM Last Enriched</label>
    <type>DateTime</type>
</CustomField>