force-app/main/default/objects/Account/fields/GTM_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>GTM_Next_Steps__c</fullName>
    <label>GTM Next Steps</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>