force-app/main/default/objects/Account/fields/GTM_Recommended_Approach__c.field-meta.xml
<CustomField>
    <fullName>GTM_Recommended_Approach__c</fullName>
    <label>GTM Recommended Approach</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>