force-app/main/default/objects/Account/fields/GTM_Risks_Objections__c.field-meta.xml
<CustomField>
    <fullName>GTM_Risks_Objections__c</fullName>
    <label>GTM Risks and Objections</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>