force-app/main/default/objects/Account/fields/GTM_Run_ID__c.field-meta.xml
<CustomField>
    <fullName>GTM_Run_ID__c</fullName>
    <label>GTM Run ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>