force-app/main/default/objects/Account/fields/GTM_Talking_Points__c.field-meta.xml
<CustomField>
    <fullName>GTM_Talking_Points__c</fullName>
    <label>GTM Talking Points</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>